--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"enable_db": true, "enable_agent": false, "api_key": "sk-nnnbfontekeesozhffpmluqdajbwzqvxeskyevmxwfignhgh"}
+{"enable_db": true, "enable_agent": true}
